# Steel

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/demo/: demo.py
apps/api/src/jai_api/: __init__.py  chat.py  db.py  fleet.py  main.py  queries.py
apps/api/src/steel_api/: __init__.py  chat.py  db.py  fleet.py  main.py  queries.py
apps/api/tests/: conftest.py  test_api.py
apps/console/: README.md  package.json
apps/console/.claude/: launch.json
apps/console/src/app/: globals.css  layout.tsx  page.tsx
apps/console/src/components/: GovernanceNotice.tsx  JourneyBar.tsx  Nav.tsx  OfflineBanner.tsx
apps/console/src/lib/: api.ts  fleet.ts  theme.ts  usePoll.ts
data/seed/: contracts.jsonl  invoices.jsonl  items.jsonl  manifest.json  news_snippets.jsonl  policy_docs.jsonl  purchase_orders.jsonl  rfx_events.jsonl  seller_personas.jsonl  suppliers.jsonl  tenants.jsonl
docs/: VISION.md
docs/adr/: ADR-001-protocols-over-frameworks.md  ADR-002-modular-monolith.md  ADR-004-checkpointing-not-temporal.md  ADR-005-bounded-autonomy.md
docs/strategy/: llm-vendor-negotiation-playbook.md
evals/: run_maturity.py  run_miniloop.py  run_suite1.py  run_suite2.py  run_suite3.py  run_suite4.py
evals/results/: suite1.scorecard.json  suite2.scorecard.json  suite4.scorecard.json
evals/suite0_smoke/: smoke.yaml
evals/suite1_supplier_intel/: build_goldens.py  goldens.yaml  injections.yaml  permissions.yaml
evals/suite2_sourcing/: scenarios.yaml
evals/suite4_negotiation/: scenarios.yaml
infra/litellm/: config.mock.yaml  config.yaml
infra/postgres/init/: 01-init.sql
parts/agents/echo/: manifest.yaml
parts/agents/echo/prompts/: echo.md
parts/agents/intake_triage/: manifest.yaml
parts/agents/negotiator/: manifest.yaml
parts/agents/orchestrator/: manifest.yaml
parts/agents/risk_sentinel/: manifest.yaml
parts/agents/sourcing/: manifest.yaml
parts/agents/spend_analyst/: manifest.yaml
parts/agents/supplier_intel/: manifest.yaml
parts/blackbox/: README.md  pyproject.toml
parts/blackbox/demo/: demo.py
parts/blackbox/src/jai_blackbox/: __init__.py  chain.py  cli.py
parts/blackbox/src/steel_blackbox/: __init__.py  chain.py  cli.py
parts/blackbox/tests/: conftest.py  test_chain.py
parts/brakes/: README.md  pyproject.toml
parts/brakes/demo/: demo.py
parts/brakes/src/jai_brakes/: __init__.py  approvals.py  killswitch.py
parts/brakes/src/steel_brakes/: __init__.py  approvals.py  killswitch.py
parts/brakes/tests/: test_brakes.py
parts/cortex/: README.md  pyproject.toml
parts/cortex/demo/: demo.py
parts/cortex/src/jai_cortex/: __init__.py  acl.py  cli.py  cortex.py  ingest.py  models.py  retrieve.py
parts/cortex/src/steel_cortex/: __init__.py  cli.py  cortex.py  ingest.py  retrieve.py  schema.py
parts/cortex/tests/: conftest.py  test_retrieve.py
parts/dyno/: README.md  pyproject.toml
parts/dyno/demo/: demo.py
parts/dyno/src/jai_dyno/: __init__.py  cli.py  graders.py  harness.py  scorecard.py  suite.py
parts/dyno/src/steel_dyno/: __init__.py  cli.py  graders.py  harness.py  scorecard.py  suite.py
parts/dyno/tests/: test_graders.py  test_harness.py  test_promotion.py  test_refusal_cases.py  test_suite.py
parts/engine/: README.md  pyproject.toml
parts/engine/demo/: demo_0.py  demo_1.py  demo_2.py  demo_3.py  demo_4.py
parts/engine/src/jai_engine/: __init__.py  compile.py  miniloop.py  negotiate.py  sourcing.py
parts/engine/src/steel_engine/: __init__.py  compile.py  miniloop.py  negotiate.py  orchestrate.py  sourcing.py
parts/engine/tests/: conftest.py  engine_fakes.py  test_checkpoint.py  test_engine.py  test_miniloop.py  test_negotiate.py  test_orchestrate.py  test_rag.py  test_sourcing.py
parts/foundry/: README.md  pyproject.toml
parts/foundry/demo/: demo.py
parts/foundry/src/jai_foundry/: __init__.py  cli.py  entities.py  generate.py  load.py  vocab.py
parts/foundry/src/steel_foundry/: __init__.py  cli.py  entities.py  generate.py  load.py  vocab.py
parts/foundry/tests/: conftest.py  test_foundry.py
parts/gateway/: README.md  pyproject.toml
parts/gateway/demo/: demo.py
parts/gateway/src/jai_gateway/: __init__.py  client.py  keys.py  pricing.py
parts/gateway/src/steel_gateway/: __init__.py  client.py  keys.py  models.py  pricing.py
parts/gateway/tests/: test_gateway.py  test_pricing.py
parts/governor/: README.md  pyproject.toml
parts/governor/demo/: demo.py
parts/governor/src/jai_governor/: __init__.py  engine.py
parts/governor/src/steel_governor/: __init__.py  engine.py  policy.py
parts/governor/tests/: test_governor.py
parts/manifest/: README.md  pyproject.toml
parts/manifest/src/jai_manifest/: manifest.py
parts/manifest/src/steel_manifest/: __init__.py  cli.py  context.py  events.py  manifest.py
parts/manifest/tests/: test_manifest.py
parts/mcp/: README.md  pyproject.toml
parts/mcp/demo/: demo.py
parts/mcp/src/jai_mcp/: __init__.py  cli.py  contracts_server.py  db.py  intake.py  registry.py  sourcing_events.py  spend_analytics.py  supplier_master.py
parts/mcp/src/steel_mcp/: __init__.py  cli.py  contracts_server.py  db.py  intake.py  registry.py  sourcing_events.py  spend_analytics.py  supplier_master.py
parts/mcp/tests/: conftest.py  test_intake.py  test_read_servers.py  test_registry.py  test_sourcing_events.py
parts/mesh/: README.md  pyproject.toml
parts/mesh/demo/: demo.py
parts/mesh/src/steel_mesh/: __init__.py  cards.py  mesh.py
parts/mesh/tests/: test_mesh.py
parts/meter/: README.md  pyproject.toml
parts/meter/demo/: demo.py
parts/meter/src/jai_meter/: __init__.py  ledger.py
parts/meter/src/steel_meter/: __init__.py  ledger.py
parts/meter/tests/: test_ledger.py
parts/registry/: README.md  pyproject.toml
parts/registry/demo/: demo.py
parts/registry/src/steel_registry/: __init__.py  cli.py  schema.py  store.py
parts/registry/tests/: test_registry.py
policies/: procurement.yaml
schemas/: agent-manifest.schema.json
(+59 files in other folders)
