[project]
name = "steel"
version = "0.1.0"
description = "STEEL — modular agentic platform for procurement (workspace root)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "parts/manifest",
    "parts/gateway",
    "parts/blackbox",
    "parts/meter",
    "parts/foundry",
    "parts/dyno",
    "parts/engine",
    "parts/cortex",
    "parts/governor",
    "parts/brakes",
    "parts/mcp",
    "parts/registry",
    "parts/mesh",
    "apps/api",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "import-linter>=2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["parts", "apps"]
addopts = "-q"

# ── Rippability rule, enforced ────────────────────────────────────────────────
# Parts communicate only through published contracts. steel_manifest is the shared
# contract package; everything may import it, it imports no other part. The
# leaf parts are mutually independent. steel_engine is the assembler: it may use
# other parts' PUBLIC APIs, never their _internal modules.
[tool.importlinter]
root_packages = [
    "steel_manifest",
    "steel_gateway",
    "steel_blackbox",
    "steel_meter",
    "steel_foundry",
    "steel_dyno",
    "steel_engine",
    "steel_cortex",
    "steel_governor",
    "steel_brakes",
    "steel_mcp",
    "steel_registry",
    "steel_mesh",
]

[[tool.importlinter.contracts]]
name = "steel_manifest is the contract layer and imports no other part"
type = "forbidden"
source_modules = ["steel_manifest"]
forbidden_modules = [
    "steel_gateway",
    "steel_blackbox",
    "steel_meter",
    "steel_foundry",
    "steel_dyno",
    "steel_engine",
    "steel_cortex",
    "steel_governor",
    "steel_brakes",
    "steel_mcp",
    "steel_registry",
    "steel_mesh",
]

[[tool.importlinter.contracts]]
name = "leaf parts are mutually independent"
type = "independence"
modules = [
    "steel_gateway",
    "steel_blackbox",
    "steel_meter",
    "steel_foundry",
]

[[tool.importlinter.contracts]]
name = "no part reaches into another part's internals"
type = "forbidden"
source_modules = [
    "steel_gateway",
    "steel_blackbox",
    "steel_meter",
    "steel_foundry",
    "steel_dyno",
    "steel_engine",
    "steel_cortex",
    "steel_governor",
    "steel_brakes",
    "steel_mcp",
    "steel_registry",
    "steel_mesh",
]
forbidden_modules = [
    "steel_gateway._internal",
    "steel_blackbox._internal",
    "steel_meter._internal",
    "steel_foundry._internal",
    "steel_dyno._internal",
    "steel_engine._internal",
    "steel_cortex._internal",
    "steel_governor._internal",
    "steel_brakes._internal",
    "steel_mcp._internal",
    "steel_registry._internal",
    "steel_mesh._internal",
]
ignore_imports = [
    "steel_gateway.* -> steel_gateway._internal",
    "steel_blackbox.* -> steel_blackbox._internal",
    "steel_meter.* -> steel_meter._internal",
    "steel_foundry.* -> steel_foundry._internal",
    "steel_dyno.* -> steel_dyno._internal",
    "steel_engine.* -> steel_engine._internal",
    "steel_cortex.* -> steel_cortex._internal",
    "steel_governor.* -> steel_governor._internal",
    "steel_brakes.* -> steel_brakes._internal",
    "steel_mcp.* -> steel_mcp._internal",
    "steel_registry.* -> steel_registry._internal",
    "steel_mesh.* -> steel_mesh._internal",
]
# Parts without an _internal module yet must not fail the contract
unmatched_ignore_imports_alerting = "none"
