[project]
name = "steel-api"
version = "0.1.0"
description = "STEEL control plane — FastAPI app exposing runs, costs, approvals, and registry to the console"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "steel-gateway",
    "steel-cortex",
    "steel-engine",
    "steel-brakes",
    "steel-blackbox",
    "steel-meter",
    "steel-governor",
    "steel-mcp",
    "steel-mesh",
    "steel-registry",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "psycopg[binary]>=3.2",
]

[project.scripts]
steel-api = "steel_api.main:serve"

[tool.uv.sources]
steel-manifest = { workspace = true }
steel-gateway = { workspace = true }
steel-cortex = { workspace = true }
steel-engine = { workspace = true }
steel-brakes = { workspace = true }
steel-blackbox = { workspace = true }
steel-meter = { workspace = true }
steel-governor = { workspace = true }
steel-mcp = { workspace = true }
steel-mesh = { workspace = true }
steel-registry = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_api"]
