[project]
name = "steel-blackbox"
version = "0.1.0"
description = "steel-blackbox — the flight recorder: hash-chained, append-only, tamper-evident audit trail"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "psycopg[binary]>=3.2",
]

[project.scripts]
steel-blackbox = "steel_blackbox.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_blackbox"]
