[project]
name = "jai-brakes"
version = "0.1.0"
description = "jai-brakes — the brakes: HITL approval gates and agent kill switches"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_brakes"]
