[project]
name = "steel-brakes"
version = "0.1.0"
description = "steel-brakes — the brakes: HITL approval gates and agent kill switches"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_brakes"]
