[project]
name = "jai-cortex"
version = "0.1.0"
description = "jai-cortex — the chassis: permission-aware procurement semantic layer with hybrid retrieval"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "jai-gateway",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]

[project.scripts]
jai-cortex = "jai_cortex.cli:main"

[tool.uv.sources]
jai-manifest = { workspace = true }
jai-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_cortex"]
