[project]
name = "steel-cortex"
version = "0.1.0"
description = "steel-cortex — the chassis: permission-aware procurement semantic layer with hybrid retrieval"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "steel-gateway",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]

[project.scripts]
steel-cortex = "steel_cortex.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }
steel-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_cortex"]
