[project]
name = "steel-dyno"
version = "0.1.0"
description = "steel-dyno — the test bench: eval harness, graders, scorecards, and autonomy promotion gates"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "steel-gateway",
    "pyyaml>=6",
]

[project.scripts]
steel-dyno = "steel_dyno.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }
steel-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_dyno"]
