[project]
name = "steel-foundry"
version = "0.1.0"
description = "steel-foundry — the parts foundry: deterministic synthetic procurement data (Borealis Manufacturing)"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "psycopg[binary]>=3.2",
    "pyyaml>=6",
]

[project.scripts]
steel-foundry = "steel_foundry.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_foundry"]
