[project]
name = "steel-gateway"
version = "0.1.0"
description = "steel-gateway — the fuel system: multi-model routing client with budgets, metering tags, and keyless mock mode"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "openai>=1.60",
    "httpx>=0.27",
]

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_gateway"]
