[project]
name = "jai-governor"
version = "0.1.0"
description = "jai-governor — the speed governor: versioned policy engine; pre-action checks an agent cannot reason its way around"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "pyyaml>=6",
]

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_governor"]
