[project]
name = "steel-governor"
version = "0.1.0"
description = "steel-governor — the speed governor: versioned policy engine; pre-action checks an agent cannot reason its way around"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "pyyaml>=6",
]

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_governor"]
