[project]
name = "steel-mcp"
version = "0.1.0"
description = "steel-mcp — the drivetrain: five procurement MCP servers (supplier-master, sourcing-events, contracts, spend-analytics, intake)"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "mcp>=1.2",
    "psycopg[binary]>=3.2",
]

[project.scripts]
steel-mcp = "steel_mcp.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_mcp"]
