[project]
name = "steel-mesh"
version = "0.1.0"
description = "steel-mesh — the CAN bus: A2A agent cards + context-propagating dispatch between agents"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "httpx>=0.27",
]

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_mesh"]
