[project]
name = "steel-meter"
version = "0.1.0"
description = "steel-meter — the odometer: per-action cost ledger (tenant / agent / run / task) enabling any future pricing model"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_meter"]
