[project]
name = "steel-registry"
version = "0.1.0"
description = "steel-registry — the fleet roster: every agent's card, autonomy level, live status, and latest scorecard"
requires-python = ">=3.12"
dependencies = [
    "steel-manifest",
    "psycopg[binary]>=3.2",
    "pyyaml>=6",
]

[project.scripts]
steel-registry = "steel_registry.cli:main"

[tool.uv.sources]
steel-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_registry"]
